codama-macros/tests/node_attribute/number_type_node_invalid_endian.fail.stderr
error: invalid endian
 --> tests/node_attribute/number_type_node_invalid_endian.fail.rs:3:41
  |
3 | #[codama(node(number_type(u32, endian = invalid)))]
  |                                         ^^^^^^^
