codama-macros/tests/node_attribute/number_type_node_invalid_endian.fail.rs
use codama::codama;

#[codama(node(number_type(u32, endian = invalid)))]
pub struct Foo(usize);

fn main() {}
